Updated html file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>My first HTML Document</title>
 </head>
 <body>
-    <h1>Heading 1</h1>
-    <p>My First Paragraph</p>
+    <h2> Hyperlinks in HTML </h2>
+    <h1>New Heading Added</h1>
+    <p>This is the modified index.html file</p>
 </body>
 </html>
