--- a/Homework W10/index.html
+++ b/Homework W10/index.html
@@ -49,7 +49,7 @@
   </div> <!-- end page -->
 
   <script type="text/javascript">
-    var specVis1 = "./interactive_visualisation.vg.json"; 
+    var specVis1 = "./interactive_visualisation.json"; 
     var specVis2 = "./pie_chart.json"; 
 
     vegaEmbed('#vis1', specVis1, { "actions": false });
