--- a/Homework W10/index.html
+++ b/Homework W10/index.html
@@ -36,6 +36,8 @@
       margin: 10px;
       box-sizing: border-box;
       width: 80%; /* Adjust the width as needed */
+      max-height: 500px; /* Set a maximum height for the chart container */
+      overflow-y: auto; /* Add vertical scrollbar if content overflows */
     }
 
     /* CSS for chart titles */
