--- a/Homework W10/index.html
+++ b/Homework W10/index.html
@@ -26,18 +26,18 @@
     /* CSS for chart containers */
     .page {
       display: flex;
-      flex-direction: column;
-      align-items: center;
+      flex-wrap: wrap;
     }
 
     .vis-container {
+      flex: 1;
       border: 1px solid #ddd;
       padding: 10px;
       margin: 10px;
       box-sizing: border-box;
-      width: 80%; /* Adjust the width as needed */
-      max-height: 500px; /* Set a maximum height for the chart container */
-      overflow-y: auto; /* Add vertical scrollbar if content overflows */
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
 
     /* CSS for chart titles */
@@ -61,17 +61,22 @@
     </div>
     <!-- end pure grid group -->
 
-    <!-- First Chart -->
-    <div class="vis-container">
-      <h2 class="chart-title">Life Expectancy vs. Total Expenditure in Year 2014</h2>
-      <div id="vis1"></div>
+    <!-- pure grid group -->
+    <div class="pure-g">
+      <div class="pure-u-1-2">
+        <div class="vis-container">
+          <h2 class="chart-title">Life Expectancy vs. Total Expenditure in Year 2014</h2>
+          <div id="vis1"></div>
+        </div>
+      </div>
+      <div class="pure-u-1-2">
+        <div class="vis-container">
+          <h2 class="chart-title">Status of Countries in 2014</h2>
+          <div id="vis2"></div>
+        </div>
+      </div>
     </div>
-
-    <!-- Second Chart -->
-    <div class="vis-container">
-      <h2 class="chart-title">Status of Countries in 2014</h2>
-      <div id="vis2"></div>
-    </div>
+    <!-- end pure grid group -->
 
   </div> <!-- end page -->
 
