--- a/ASS2/index.html
+++ b/ASS2/index.html
@@ -116,11 +116,11 @@
   </div> <!-- end page -->
 
   <script type="text/javascript">
-    var specVis1 = "./correlation.json"; 
-    var specVis2 = "./map.json";
-    var specVis3 = "./pie_chart.json";
-    var specVis4 = "./top5bar.json";
-    var specVis5 = "./total_expenditure_bubble.json"; 
+    var specVis1 = "js/correlation.json"; 
+    var specVis2 = "js/map.json";
+    var specVis3 = "js/pie_chart.json";
+    var specVis4 = "js/top5bar.json";
+    var specVis5 = "js/total_expenditure_bubble.json"; 
 
     vegaEmbed('#vis1', specVis1, { "actions": false });
     vegaEmbed('#vis2', specVis2, { "actions": false }).then(function (result) {
