--- a/ASS2/index.html
+++ b/ASS2/index.html
@@ -35,11 +35,11 @@
       box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     }
     h1 {
-      font-size: 24px;
+      font-size: 34px;
       margin-bottom: 20px;
     }
     .introduction {
-      font-size: 16px;
+      font-size: 24px;
       margin-bottom: 20px;
     }
     .chart-container {
@@ -51,7 +51,7 @@
       margin-top: 20px;
     }
     .explanation {
-      font-size: 14px;
+      font-size: 24px;
     }
   </style>
   <!-- End custom CSS -->
@@ -66,7 +66,7 @@
 
     <!-- Introduction -->
     <div class="introduction">
-      Your introduction text goes here. Provide context and background information for the charts.
+      Life expectancy, a crucial metric in public health, gauges the average lifespan of a population. It provides invaluable insights into a nation's overall well-being and healthcare system. Explore the factors influencing global life expectancy in my visualizations, revealing the complex interplay of demographics, healthcare, and socioeconomic conditions.
     </div>
 
     <!-- Charts and Explanations -->
@@ -75,7 +75,10 @@
       <div id="vis1" class="chart"></div>
       <!-- Explanation for Chart 1 (Beside or Underneath) -->
       <div class="explanation">
-        Explanation for Chart 1 goes here. Describe the data, trends, and insights from the chart.
+        The map visualisation shows the <b>life expectancy</b> of each country in 2014.
+        Darker shades represent countries with higher life expectancy, while lighter shades indicate lower life expectancy. 
+        This map offers an overview of how life expectancy is distributed globally, highlighting areas where people tend to live longer or face challenges to their life expectancy. 
+        Further insights on the top-performing countries can be explored in the accompanying chart.
       </div>
     </div>
 
@@ -84,7 +87,11 @@
       <div id="vis2" class="chart"></div>
       <!-- Explanation for Chart 2 (Beside or Underneath) -->
       <div class="explanation">
-        Explanation for Chart 2 goes here. Describe the data, trends, and insights from the chart.
+        This bar chart shows the top 5 countries with the highest life expectancy in 2014 and their Human Development Index (HDI) in terms of income composition of resources.
+        From this chart, <b>Germany</b> can be seen to have the highest HDI, at <b>0.92</b>.
+        These countries exhibit exceptional life expectancy, reflecting strong healthcare and societal well-being. 
+        The HDI offers more insights, indicating a well-rounded approach to development, where income distribution plays a significant role.
+        It sets as an example for other countries looking to improve their citizens' well-being.
       </div>
     </div>
 
@@ -116,12 +123,14 @@
   </div> <!-- end page -->
 
   <script type="text/javascript">
-    var specVis1 = "js/correlation.json"; 
-    var specVis2 = "js/map.json";
+    var specVis1 = "js/map.json";
+    var specVis2 = "js/top5bar.json";
     var specVis3 = "js/pie_chart.json";
-    var specVis4 = "js/top5bar.json";
-    var specVis5 = "js/total_expenditure_bubble.json"; 
+    var specVis4 = "js/total_expenditure_bubble.json"; 
+    var specVis5 = "js/correlation.json"; 
 
+
+    
     vegaEmbed('#vis1', specVis1, { "actions": false });
     vegaEmbed('#vis2', specVis2, { "actions": false }).then(function (result) {
       // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
