--- a/ASS2/index.html
+++ b/ASS2/index.html
@@ -66,7 +66,7 @@
 
     <!-- Introduction -->
     <div class="introduction">
-    <span style="color: #253C98;">Life Expectancy</span>, a crucial metric in public health, gauges the average lifespan of a population. It provides invaluable insights into a nation's overall well-being and healthcare system. Explore the factors influencing global life expectancy in my visualizations, revealing the complex interplay of demographics, healthcare, and socioeconomic conditions.
+    <span style="color: #05763C;">Life Expectancy</span>, a crucial metric in public health, gauges the average lifespan of a population. It provides invaluable insights into a nation's overall well-being and healthcare system. Explore the factors influencing global life expectancy in my visualizations, revealing the complex interplay of demographics, healthcare, and socioeconomic conditions.
     </div>
 
     <!-- Charts and Explanations -->
