Added explanation for pie chart

--- a/ASS2/index.html
+++ b/ASS2/index.html
@@ -95,6 +95,7 @@
         This bar chart shows the top 5 countries with the highest life expectancy in 2014 and their Human Development Index (HDI) in terms of income composition of resources.
         From this chart, <b>Germany</b> can be seen to have the highest HDI, at <b>0.92</b>.
         <br>
+        <br>
         These countries exhibit exceptional life expectancy, reflecting strong healthcare and societal well-being. 
         The HDI offers more insights, indicating a well-rounded approach to development, where income distribution plays a significant role.
         It sets as an example for other countries looking to improve their citizens' well-being.
@@ -108,7 +109,15 @@
       <div id="vis3" class="chart"></div>
       <br>
       <div class="explanation">
-        Explanation for Chart 3 goes here.
+        This pie chart visually represents the distribution of countries into two main categories: 'developing' and 'developed.'
+        The size of each slice reflects the proportion of countries in each category. 
+        The chart provides a clear overview of the global distribution of nations based on their socioeconomic development status. 
+        It serves as a valuable tool for understanding the balance between
+        <span style="color:#A96FD5;">developing</span> and <span style="color:#243CA9;">developed</span> countries, highlighting the diversity in economic and social progress worldwide.
+        <br>
+        <br>
+        From the pie chart, most countries can be seen to still be <span style="color:#A96FD5;">developing</span> while only a small fraction, <b>17.49%</b> of the countries are already <span style="color:#243CA9;">developed</span> in 2014.
+        <br>
       </div>
     </div>
     <br>
