Added insights to chart 4.

--- a/ASS2/index.html
+++ b/ASS2/index.html
@@ -109,7 +109,8 @@
       <div id="vis3" class="chart"></div>
       <br>
       <div class="explanation">
-        This pie chart visually represents the distribution of countries into two main categories: 'developing' and 'developed.'
+        This pie chart visually represents the distribution of countries into two main categories: 
+        '<span style="color:#A96FD5;">developing</span>' and '<span style="color:#243CA9;">developed</span>.'
         The size of each slice reflects the proportion of countries in each category. 
         The chart provides a clear overview of the global distribution of nations based on their socioeconomic development status. 
         It serves as a valuable tool for understanding the balance between
@@ -127,7 +128,19 @@
       <div id="vis4" class="chart"></div>
       <br>
       <div class="explanation">
-        Explanation for Chart 4 goes here.
+        This interactive bubble plot offers a comprehensive view of the relationship between life expectancy and total government expenditure on healthcare as a percentage of total government expenditure (%).
+        Each bubble represents a specific country, with the size of the bubble indicating its population size.
+        The color of each bubble distinguishes between '<span style="color:#A96FD5;">developing</span>' and '<span style="color:#243CA9;">developed</span>' countries, providing valuable context.
+        <br>
+        <br>
+        <span style="color:#69560e;">Germany</span> can be seen to have a high total expenditure(%) of 11.3% whereas
+        <span style="color:#0d4a3c;">Belgium</span> has a low total expenditure(%), of only 1.59%.
+        Interestingly, both countries share the same life expectancy.
+        <br>
+        <br>
+        One key observation is the wide variation in life expectancy and healthcare expenditure across countries.
+        Bubbles positioned higher on the vertical axis indicate higher life expectancies, while those positioned farther to the right on the horizontal axis represent countries with a higher percentage of government expenditure dedicated to healthcare.
+        This reveals that some countries achieve longer life expectancies with relatively lower healthcare spending, while others require higher healthcare investments to attain similar results.
       </div>
     </div>
 
