Added explanation for chart 5

--- a/ASS2/index.html
+++ b/ASS2/index.html
@@ -149,7 +149,13 @@
       <div id="vis5" class="chart"></div>
       <br>
       <div class="explanation">
-        Explanation for Chart 5 goes here.
+        From the correlation heat map, <span style="color:#09424d;">Diphtheria</span> and
+        <span style="color:#09424d;">Polio</span> have a positive correlation with <span style="color: #05763C;">life expectancy</span>.
+        This suggests that in countries with <b>high vaccination rates</b> for these diseases, life expectancy tends to be higher.
+        <br>
+        <br>
+        <span style="color:#C01711;">Adult Mortality</span> has a strong negative correlation with <span style="color: #05763C;">life expectancy</span>
+        which indicates that countries where adult mortality is high, life expectancy tends to be lower.
       </div>
     </div>
     <br>
