--- a/ASS2/index.html
+++ b/ASS2/index.html
@@ -139,8 +139,8 @@
         <br>
         <br>
         One key observation is the wide variation in life expectancy and healthcare expenditure across countries.
-        Bubbles positioned higher on the vertical axis indicate higher life expectancies, while those positioned farther to the right on the horizontal axis represent countries with a higher percentage of government expenditure dedicated to healthcare.
-        This reveals that some countries achieve longer life expectancies with relatively lower healthcare spending, while others require higher healthcare investments to attain similar results.
+        Bubbles higher up have longer life expectancies, and those to the right spend more on healthcare.
+        This reveals that some countries achieve longer life expectancies with less spending, while others require more investments to attain similar results.
       </div>
     </div>
 
