--- a/ASS2/index.html
+++ b/ASS2/index.html
@@ -156,6 +156,9 @@
         <br>
         <span style="color:#C01711;">Adult Mortality</span> has a strong negative correlation with <span style="color: #05763C;">life expectancy</span>
         which indicates that countries where adult mortality is high, life expectancy tends to be lower.
+        <br>
+        <br>
+        The heatmap shows how these health factors are connected, revealing that public health is a complex and multifaceted issue.
       </div>
     </div>
     <br>
