--- a/ASS2/index.html
+++ b/ASS2/index.html
@@ -37,6 +37,7 @@
     h1 {
       font-size: 34px;
       margin-bottom: 20px;
+      text-align: center;
     }
     .introduction {
       font-size: 24px;
@@ -62,7 +63,7 @@
   <div class="page">
 
     <!-- Title -->
-    <h1>Life Expectancy Insights: A Multi-Chart Analysis for the Year 2014</h1>
+    <h1 style="text-align: center;">Life Expectancy Insights: A Multi-Chart Analysis for the Year 2014</h1>
 
     <!-- Introduction -->
     <div class="introduction">
