Changed background color

--- a/ASS2/index.html
+++ b/ASS2/index.html
@@ -23,7 +23,7 @@
   <style>
     /* Custom CSS for layout and background color */
     body {
-      background-color: #f0f0f0; /* Set your desired background color here */
+      background-color: #dff7cb; /* Set your desired background color here */
       font-family: 'Open Sans', sans-serif;
       margin: 20px;
       padding: 20px;
