--- a/ASS2/index.html
+++ b/ASS2/index.html
@@ -23,14 +23,14 @@
   <style>
     /* Custom CSS for layout and background color */
     body {
-      background-color: #dff7cb; /* Set your desired background color here */
+      background-color: #D3EAD1; /* Set your desired background color here */
       font-family: 'Open Sans', sans-serif;
       margin: 20px;
       padding: 20px;
     }
     .page {
       background-color: #ffffff; /* Set your desired background color for the content area */
-      padding: 20px;
+      padding: 40px;
       border-radius: 5px;
       box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     }
