--- a/ASS2/index.html
+++ b/ASS2/index.html
@@ -30,7 +30,7 @@
     }
     .page {
       background-color: #ffffff; /* Set your desired background color for the content area */
-      padding: 80px;
+      padding: 40px;
       border-radius: 5px;
       box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     }
@@ -53,6 +53,10 @@
     }
     .explanation {
       font-size: 24px;
+      max-width: 600px; /* Adjust the value as needed for around 10 to 12 words per line */
+      margin-left: auto;
+      margin-right: auto;
+    }
     }
   </style>
   <!-- End custom CSS -->
