--- a/ASS2/index.html
+++ b/ASS2/index.html
@@ -33,6 +33,7 @@
       padding: 40px;
       border-radius: 5px;
       box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+      max-width: 1000px;
     }
     h1 {
       font-size: 34px;
@@ -41,6 +42,9 @@
     }
     .introduction {
       font-size: 24px;
+      max-width: 800px; /* Adjust the value as needed for around 10 to 12 words per line */
+      margin-left: auto;
+      margin-right: auto;
       margin-bottom: 20px;
     }
     .chart-container {
@@ -166,6 +170,7 @@
         The heatmap shows how these health factors are connected, revealing that public health is a complex and multifaceted issue.
       </div>
     </div>
+    <br>
     <br>
     
   </div> <!-- end page -->
