--- a/ASS2/index.html
+++ b/ASS2/index.html
@@ -16,7 +16,8 @@
   <!-- Google font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Lato:wght@400;700&display=swap"
+    rel="stylesheet"> <!-- Include Playfair Display and Lato fonts -->
 
   <!-- CSS file -->
   <link rel="stylesheet" type="text/css" href="css/styles.css" media="all">
@@ -24,7 +25,7 @@
     /* Custom CSS for layout and background color */
     body {
       background-color: #D3EAD1; /* Set your desired background color here */
-      font-family: 'Open Sans', sans-serif;
+      font-family: 'Lato', sans-serif; /* Use Lato for content */
       margin: 20px;
       padding: 20px;
     }
@@ -40,6 +41,7 @@
       max-width: 900px;
       margin-bottom: 20px;
       text-align: center;
+      font-family: 'Playfair Display', serif; /* Use Playfair Display for the title */
     }
     .introduction {
       font-size: 24px;
@@ -62,7 +64,6 @@
       margin-left: auto;
       margin-right: auto;
     }
-    }
   </style>
   <!-- End custom CSS -->
 </head>
@@ -76,7 +77,7 @@
 
     <!-- Introduction -->
     <div class="introduction">
-    <span style="color: #05763C;">Life Expectancy</span>, a crucial metric in public health, gauges the average lifespan of a population. It provides invaluable insights into a nation's overall well-being and healthcare system. Explore the factors influencing global life expectancy in my visualizations, revealing the complex interplay of demographics, healthcare, and socioeconomic conditions.
+      <span style="color: #05763C;">Life Expectancy</span>, a crucial metric in public health, gauges the average lifespan of a population. It provides invaluable insights into a nation's overall well-being and healthcare system. Explore the factors influencing global life expectancy in my visualizations, revealing the complex interplay of demographics, healthcare, and socioeconomic conditions.
     </div>
 
     <!-- Charts and Explanations -->
