--- a/ASS2/index.html
+++ b/ASS2/index.html
@@ -41,7 +41,7 @@
       max-width: 900px;
       margin-bottom: 20px;
       text-align: center;
-      font-family: 'Playfair Display', serif; /* Use Playfair Display for the title */
+      font-family: 'Roboto Slab', serif; 
     }
     .introduction {
       font-size: 24px;
