Change the visualization based on the critique feedback.html

--- a/ASS2/index.html
+++ b/ASS2/index.html
@@ -87,7 +87,6 @@
       <!-- Explanation for Chart 1 (Beside or Underneath) -->
       <br>
       <div class="explanation">
-        The map visualisation shows the <b>life expectancy</b> of each country in 2014.
         <span style="color:#a63603;">Darker shades</span> represent countries with higher life expectancy, while <span style="color:#fdbe85;">lighter shades</span> indicate lower life expectancy. 
         This map offers an overview of how life expectancy is distributed globally, highlighting areas where people tend to live longer or face challenges to their life expectancy. 
         <br>
@@ -103,12 +102,11 @@
       <br>
       <!-- Explanation for Chart 2 (Beside or Underneath) -->
       <div class="explanation">
-        This bar chart shows the top 5 countries with the highest life expectancy in 2014 and their Human Development Index (HDI) in terms of income composition of resources.
-        From this chart, <b>Germany</b> can be seen to have the highest HDI, at <b>0.92</b>.
+        The Human Development Index (HDI) is a composite measure used to assess and compare the overall development status of countries based on 
+        factors such as life expectancy, education, and per capita income.
         <br>
         <br>
         These countries exhibit exceptional life expectancy, reflecting strong healthcare and societal well-being. 
-        The HDI offers more insights, indicating a well-rounded approach to development, where income distribution plays a significant role.
         It sets as an example for other countries looking to improve their citizens' well-being.
       </div>
     </div>
@@ -120,35 +118,21 @@
       <div id="vis3" class="chart"></div>
       <br>
       <div class="explanation">
-        This pie chart visually represents the distribution of countries into two main categories: 
-        '<span style="color:#A96FD5;">developing</span>' and '<span style="color:#243CA9;">developed</span>.'
-        The size of each slice reflects the proportion of countries in each category. 
-        The chart provides a clear overview of the global distribution of nations based on their socioeconomic development status. 
+        The idiom provides a clear overview of the global distribution of nations based on their socioeconomic development status. 
         It serves as a valuable tool for understanding the balance between
         <span style="color:#A96FD5;">developing</span> and <span style="color:#243CA9;">developed</span> countries, highlighting the diversity in economic and social progress worldwide.
         <br>
         <br>
-        From the pie chart, most countries can be seen to still be <span style="color:#A96FD5;">developing</span> while only a small fraction, <b>17.49%</b> of the countries are already <span style="color:#243CA9;">developed</span> in 2014.
+        Most countries can be seen to still be <span style="color:#A96FD5;">developing</span> while only a small fraction, <b>17.49%</b> of the countries are already <span style="color:#243CA9;">developed</span> in 2014.
         <br>
       </div>
     </div>
     <br>
     
     <!-- Chart 4 -->
-    <div class="chart-container">
-      <div id="vis4" class="chart"></div>
-      <br>
-      <div class="explanation">
-        This interactive bubble plot offers a comprehensive view of the relationship between life expectancy and total government expenditure on healthcare as a percentage of total government expenditure (%).
-        Each bubble represents a specific country, with the size of the bubble indicating its population size.
-        The color of each bubble distinguishes between '<span style="color:#A96FD5;">developing</span>' and '<span style="color:#243CA9;">developed</span>' countries, providing valuable context.
-        <br>
-        <br>
-        <span style="color:#69560e;">Germany</span> can be seen to have a high total expenditure(%) of 11.3% whereas
-        <span style="color:#0d4a3c;">Belgium</span> has a low total expenditure(%), of only 1.59%.
-        Interestingly, both countries share the same life expectancy.
-        <br>
-        <br>
+    <div class="chart-container" style="display: flex; align-items: flex-start;">
+      <div id="vis4" class="chart" style="flex: 1;"></div>
+      <div class="explanation" style="flex: 1;">
         One key observation is the wide variation in life expectancy and healthcare expenditure across countries.
         Bubbles higher up have longer life expectancies, and those to the right spend more on healthcare.
         This reveals that some countries achieve longer life expectancies with less spending, while others require more investments to attain similar results.
@@ -160,16 +144,16 @@
       <div id="vis5" class="chart"></div>
       <br>
       <div class="explanation">
-        From the correlation heat map, <span style="color:#09424d;">Diphtheria</span> and
-        <span style="color:#09424d;">Polio</span> have a positive correlation with <span style="color: #05763C;">life expectancy</span>.
-        This suggests that in countries with <b>high vaccination rates</b> for these diseases, life expectancy tends to be higher.
+        <span style="color:#09424d;">Diphtheria</span> and
+        <span style="color:#09424d;">Polio</span> have a positive correlation with <span style="color: #05763C;">life expectancy</span> which 
+        suggests that in countries with <b>high vaccination rates</b> for these diseases, life expectancy tends to be higher.
         <br>
         <br>
         <span style="color:#C01711;">Adult Mortality</span> has a strong negative correlation with <span style="color: #05763C;">life expectancy</span>
-        which indicates that countries where adult mortality is high, life expectancy tends to be lower.
+        which indicates the importance of having a good healthcare system.
         <br>
         <br>
-        The heatmap shows how these health factors are connected, revealing that public health is a complex and multifaceted issue.
+        The idiom shows how these health factors are connected, revealing that public health is a complex and multifaceted issue.
       </div>
     </div>
     <br>
