--- a/ASS2/index.html
+++ b/ASS2/index.html
@@ -113,7 +113,7 @@
     <br>
     
     <!-- Chart 3 -->
-    <div class="chart-container" style="display: flex; align-items: flex-start;">
+    <div class="chart-container">
       <div id="vis3" class="chart" style="flex: 1;"></div>
       <div class="explanation" style="flex: 1;">
         The idiom provides a clear overview of the global distribution of nations based on their socioeconomic development status. 
@@ -122,7 +122,6 @@
         <br>
         <br>
         Most countries can be seen to still be <span style="color:#A96FD5;">developing</span> while only a small fraction, <b>17.49%</b> of the countries are already <span style="color:#243CA9;">developed</span> in 2014.
-        <br>
       </div>
     </div>
     <br>
