--- a/ASS2/index.html
+++ b/ASS2/index.html
@@ -113,7 +113,7 @@
     <br>
     
     <!-- Chart 3 -->
-    <div class="chart-container">
+    <div class="chart-container" style="display: flex;">
       <div id="vis3" class="chart" style="flex: 1;"></div>
       <div class="explanation" style="flex: 1;">
         The idiom provides a clear overview of the global distribution of nations based on their socioeconomic development status. 
